--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,13 @@
 {
-  "name": "Extension Demo",
+  "manifest_version": 2,
+  "name": "Dynamic Button Appender",
   "version": "1.0",
-  "description": "Build an Basic Extension!",
-  "permissions": [
-      "activeTab"
+  "content_scripts": [
+    {
+      "matches": ["*://*/*"], // Match all URLs
+      "js": ["content.js"],
+      "run_at": "document_end"
+    }
   ],
-  "browser_action": {
-      "default_popup": "popup.html"
-  },
-  "manifest_version": 2
+  "permissions": ["activeTab"]
 }
